--- a/src/home.module.css
+++ b/src/home.module.css
@@ -1,10 +1,9 @@
-.homeWrapped {
+/* .homeWrapped {
     display: flex;
     flex-direction: row;
     /* flex-wrap: wrap-reverse; */
     justify-content: space-around;
     align-content: center;
-    /* color: #c05d5d; */
     background-color: #464a52;
 
 }
@@ -36,3 +35,5 @@
     background-color: #282c34;
     color: #bbb8b8;
 }
+
+*/
